--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,18 @@
 
 # Site settings
 title: Jekyll Resume
-email: email@domain.com
+email: liz.glavin@yandex.com
 description: Jekyll Resume is a mega simple resume theme for Jekyll.
 baseurl: ""
-url: "http://mattcouchman.co.uk/jekyll-resume"
-name: Matt Couchman
-job: front end engineer
-location: Birmingham, UK
-languages: HTML, CSS and Javascript
-twitter_username: mattcouchman
-github_username:  mattcouchman
-codepen_username:  mattcouchman
-email_address: some@email.com
+url: "http://lizglavin.com"
+name: Liz Glavin
+job: Web Developer
+location: Providence, RI
+languages: HTML, CSS and Javascript, PHP
+twitter_username: 
+github_username:  lglavin
+codepen_username:  
+email_address: liz.glavin@yandex.com
 
 # Build settings
 markdown: kramdown
