--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll Resume Theme
 
 # Site settings
-title: Jekyll Resume
+title: Liz Glavin Resume
 email: liz.glavin@yandex.com
 description: Jekyll Resume is a mega simple resume theme for Jekyll.
 baseurl: ""
