--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,10 @@
--   qualification: Apprentice Ruby On Rails Developer   
+-   qualification: Ruby on Rails Developer 
     school: Launch Academy
-    description: Learned full stack web development, pair programming, engineering empathy and deploying multiple fully ­functional applications. Developed and designed an application using Ruby on Rails, CSS3, and Bootstrap. Allows for user sign­in/sign out, functionality to search markets by location and allows user recommendations and reviews of the individual markets. Developed an application that allows users to upload an item for other users to review, vote and comment on the items. Special focus on collaboration, team work and communication
+    description: Ruby on Rails
 
 -   qualification: Front-end Web Developer 
     school: General Assembly
-    description: Focus on HTML5, CSS3, jQuery, and JavaScript
-     Practice with wireframes, project planning and file organization
-    Custom design websites from psd files
-     Testing cross ­browser compatibility
+    description: HTML, CSS, Javascript
 
 -   qualification: Masters of Arts Criminal Justice
     school: University of Massachsuetts 
