--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,4 +1,4 @@
--   qualification: Ruby on Rails Developer 
+-   qualification: Appretice Ruby on Rails Developer 
     school: Launch Academy
     description: Ruby on Rails
 
