--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
 -   qualification: Appretice Ruby on Rails Developer 
     school: Launch Academy
-    description: Ruby on Rails
+    description: Learned full stack web development, pair programming, engineering empathy and deploying multiple fully ­functional applications.
 
 -   qualification: Front-end Web Developer 
     school: General Assembly
-    description: HTML, CSS, Javascript
+    description:  Focus on HTML5, CSS3, jQuery, and JavaScript
 
 -   qualification: Masters of Arts Criminal Justice
     school: University of Massachsuetts 
