--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,10 +1,10 @@
 -   title: Web Developer
     company: Omnia Agency
-    description: Website design, development, customization and management, Developed custom WordPress themes based on PSD files, Built strong relationships with clients, Collaborated with co-workers to find solutions
+    description: Website design, development, customization and management. Developed custom WordPress themes based on PSD files. Built strong relationships with clients. Collaborated with co-workers to find solutions
  
 
 -   title: Web Developer
     company: Freelancer
-    description: Website design, development, customization and management, Designed and development custom websites and web applications with the use of HTML5, CSS3, Jekyll, Bootstrap, Squarespace, WordPress, Shopify, jQuery/JavaScript
+    description: Designed and development custom websites and web applications with the use of HTML5, CSS3, Jekyll, Bootstrap, Squarespace, WordPress, Shopify, jQuery/JavaScript
 
 
