--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,7 @@
 
 -   qualification: Front-end Web Developer 
     school: General Assembly
-    description:  Focus on HTML5, CSS3, jQuery, and JavaScript
+    description:  Focus on HTML5, CSS3, jQuery, and Javascript
 
 -   qualification: Masters of Arts Criminal Justice
     school: University of Massachsuetts 
