--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ location: Providence, RI
 languages: HTML, CSS and Javascript, PHP
 # twitter_username: 
 github_username:  lglavin
-# codepen_username:  
+bitbucket_username: lizglavin-omnia
 email_address: liz.glavin@yandex.com
 
 # Build settings
