--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "http://lizglavin.com"
 name: Liz Glavin
 job: Web Developer
 location: Providence, RI
-languages: HTML, CSS and Javascript, PHP
+languages: HTML, CSS and JavaScript, PHP
 # twitter_username: 
 github_username:  lglavin
 bitbucket_username: lizglavin-omnia
